--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "react": "^19.0.0",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2",
     "sass": "^1.82.0",
